--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,55 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(87, 26, 201, 0.7) !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.noSelect {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.noSelect:focus {
+  outline: none !important;
+}
+
+@media only screen and (max-width: 1400px) {
+  .a {
+    width: 45% !important;
+  }
+  .b {
+    width: 50% !important;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .a {
+    width: 65% !important;
+  }
+  .b {
+    width: 75% !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .a {
+    width: 85% !important;
+  }
+  .b {
+    width: 80% !important;
+    top: 51% !important;
+  }
 }
