--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgba(87, 26, 201, 0.7) !important;
+  background-color: #8f53ff;
 }
 
 code {
